# Statistical-Data-Processor-and-Financial-Calculator

./: .clang-format  .gitattributes  CMakeLists.txt  README.md  report.csv
.github/workflows/: cmake.yml
include/: csv_reader.h  dataframe.h  finance.h  input_utils.h  loan_calculator_ui.h  loan_math.h  loan_simulation.h  memory_utils.h  money.h  report.h  statistics.h  time_series_ui.h  typedefs.h
src/: csv_reader.c  dataframe.c  finance.c  input_utils.c  loan_calculator_ui.c  loan_math.c  loan_simulation.c  main.c  memory_utils.c  money.c  report.c  statistics.c  time_series_ui.c
tests/: main_tests.c  tests_csv_reader.c  tests_dataframe.c  tests_loan_math.c  tests_loan_simulation.c  tests_memory_utils.c  tests_money.c  tests_statistics.c
tests/unity/: unity.c  unity.h  unity_internals.h
